--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
+  <title>Título da Página</title>
+</head>
+<herader>
+    <h1>começo</h1>
+</herader>
+<body>
+  <h1>Bem-vindo!</h1>
+  <p>Este é o conteúdo inicial da sua página.</p>
+</body>
+</html>
 
