--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,14 +5,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="style.css">
-  <title>Título da Página</title>
+  <title>Título da pagina</title>
 </head>
-<herader>
-    <h1>começo</h1>
-</herader>
+<header>
+  <h1>Bem vindo a nossa pagina !!!!! </h1>
+</header>
 <body>
   <h1>Bem-vindo!</h1>
   <p>Este é o conteúdo inicial da sua página.</p>
+  <main>
+   <div class="introdução">
+    <h3> nessa pagina voce podera selecioar conteudos em que possuei duvidas para pooder ter apoio de outros estudandoptes ou até mesmo proficionais com doutorado na area.</h3>
+   </div> 
+   <div class="escolha">
+    <div class="aluno">
+      <a href="../pages/aluno.htmlç">
+        <button class="add-button" arial="direcionese a pagina de aluno">ALUNO</button>
+
+      </a>
+    </div>
+    <div class="mentor">
+      <a href="../pages/mentor.html">
+        <button class="add-button" arial="direcionese a pagina de aluno">MENTOR</button>
+
+      </a>
+    </div>
+   </div>
+  </main>
 </body>
 </html>
 
