--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,18 +1,30 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-  <title>Título da Página</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    {% block title %} <title>Título da pagina</title> {% end block }
 </head>
-<herader>
-    <h1>começo</h1>
-</herader>
-<body>
-  <h1>Bem-vindo!</h1>
-  <p>Este é o conteúdo inicial da sua página.</p>
-</body>
-</html>
 
+<header>
+    <h1></h1>
+</header>
+
+    <body>
+
+        <h1>Bem-vindo!</h1>
+        <p>Este é o conteúdo inicial da sua página.</p>
+        <main>
+        <div class="introdução">
+            <h3> nessa pagina voce podera selecioar conteudos em que possuei duvidas para pooder ter apoio de outros estudandoptes ou até mesmo proficionais com doutorado na area.</h3>
+        </div> 
+        <div class="escolha">
+            
+        </div>
+        </main>
+
+    </body>
+</html>
