--- a/templates/home.html
+++ b/templates/home.html
@@ -1,32 +1,20 @@
+{% extends "layout.html %}
 
-
-
-
-
-
-
-
-
-
-<main>
-   <div class="introdução">
-    <h3> nessa pagina voce podera selecioar conteudos em que possuei duvidas para pooder ter apoio de outros estudandoptes ou até mesmo proficionais com doutorado na area.</h3>
-   </div> 
-   <div class="escolha">
-    <div class="aluno">
-      <a href="../pages/aluno.htmlç">
-        <button class="add-button" arial="direcionese a pagina de aluno">ALUNO</button>
-
-      </a>
+{% block content %}
+    <div class="introdução">
+        <h3> nessa pagina voce podera selecioar conteudos em que possuei duvidas para pooder ter apoio de outros estudandoptes ou até mesmo proficionais com doutorado na area.</h3>
+    </div> 
+    <div class="escolha">
+        <div class="aluno">
+            <a href="../pages/aluno.htmlç">
+                <button class="add-button" arial="direcionese a pagina de aluno">ALUNO</button>
+            </a>
+        </div>
+        <div class="mentor">
+            <a href="../pages/mentor.html">
+                <button class="add-button" arial="direcionese a pagina de aluno">MENTOR</button>
+            </a>
+        </div>
     </div>
-    <div class="mentor">
-      <a href="../pages/mentor.html">
-        <button class="add-button" arial="direcionese a pagina de aluno">MENTOR</button>
-
-      </a>
-    </div>
-   </div>
-  </main>
-</body>
-</html>
+{% endblock %}
 
