atualize_desc_tutor

--- a/templates/desc_tutor.html
+++ b/templates/desc_tutor.html
@@ -1,8 +1,13 @@
 <body>
     <h3>&larr; Voltar</h3>
     <main>
-        <div class="container-infogeral">
-            <div class=""
+        <div class="container-infogeraltutor">
+            <div class="pilar_foto">
+
+            </div>
+            <div class="pilar_foto">
+
+            </div>
 
 
 
