--- a/templates/desc_tutor.html
+++ b/templates/desc_tutor.html
@@ -1,6 +1,7 @@
-<body>
-    <h3>&larr; Voltar</h3>
-    <main>
+{% extends "layout.html" %}
+
+{% block content %}
+        <h3>&larr; Voltar</h3>
         <div class="container-infogeraltutor">
             <div class="pilar_foto">
 
@@ -14,16 +15,4 @@
 
 
         </div>
-    </main>
-
-
-
-
-
-
-
-
-
-
-
-</body>
+{% endblock %}
