--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -4,23 +4,28 @@
 
 <div class="cadastro-container">
     <h2>Cadastro</h2>
-    <div class="cadastro-group">
-        <label for="nome">Nome</label>
-        <input type="text" id="cadastro-nome" placeholder="Enter the your name ">
+    <div class="cadrasto-form">
+        <form action="{{url_for('add_cadastro')}}" method="POST">
+            
+        </form>
+        <div class="cadastro-group">
+            <label for="nome">Nome</label>
+            <input type="text" id="cadastro-nome" placeholder="Enter the your name ">
 
-    </div>
-    <h2>Cadastro</h2>
-    <div class="cadastro-group">
-        <label for="nome">email</label>
-        <input type="text" id="cadastro-email" placeholder="Enter the your name ">
+        </div>
+        <h2>Cadastro</h2>
+        <div class="cadastro-group">
+            <label for="nome">email</label>
+            <input type="text" id="cadastro-email" placeholder="Enter the your name ">
 
-    </div>
-    <h2>Cadastro</h2>
-    <div class="cadastro-group">
-        <label for="nome">senha</label>
-        <input type="text" id="cadastro-senha" placeholder="Enter the your name ">
+        </div>
+        <h2>Cadastro</h2>
+        <div class="cadastro-group">
+            <label for="nome">senha</label>
+            <input type="text" id="cadastro-senha" placeholder="Enter the your name ">
 
+        </div>
+        <button type="submit" class="submit-butoon">Add</button>
     </div>
-    <button type="submit" class="submit-butoon">Add</button>
 </div>
 {% endblock %}
