--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -10,22 +10,19 @@
         </form>
         <div class="cadastro-group">
             <label for="nome">Nome</label>
-            <input type="text" id="cadastro-nome" placeholder="Enter the your name ">
+            <input type="text" id="cadastro-nome" placeholder="Coloque seu nome">
 
         </div>
-        <h2>Cadastro</h2>
-        <div class="cadastro-group">
+            <div class="cadastro-group">
             <label for="nome">email</label>
-            <input type="text" id="cadastro-email" placeholder="Enter the your name ">
+            <input type="text" id="cadastro-email" placeholder="Coloque seu email">
 
         </div>
-        <h2>Cadastro</h2>
-        <div class="cadastro-group">
+            <div class="cadastro-group">
             <label for="nome">senha</label>
-            <input type="text" id="cadastro-senha" placeholder="Enter the your name ">
-
+            <input type="text" id="cadastro-senha" placeholder="Coloque sua senha">
         </div>
-        <button type="submit" class="submit-butoon">Add</button>
+        <button type="submit" class="submit-butoon">Entrar</button>
     </div>
 </div>
 {% endblock %}
