--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,1 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+body {
+  background-color: #edf2f4;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #000000;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+header {
+    height: 150px;
+}
