--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,32 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class="introdução">
-        <h3> nessa pagina voce podera selecioar conteudos em que possuei duvidas para pooder ter apoio de outros estudandoptes ou até mesmo proficionais com doutorado na area.</h3>
-    </div> 
-    <div class="escolha">
-        <div class="aluno">
-            <a href="../pages/aluno.htmlç">
-                <button class="add-button" arial="direcionese a pagina de aluno">ALUNO</button>
-            </a>
+    <div class = "container info">
+        <div class = "main text">
+            <h1> De </h1>
+            <h1> estudante </h1>
+            <h2> PARA ESTUDANTE</h2>
+            <div class = "mini desc">
+                <p> Um site pensado pra quem quer aprender sem custo e ensinar sem limites</p>
+            </div>
         </div>
-        <div class="mentor">
-            <a href="../pages/mentor.html">
-                <button class="add-button" arial="direcionese a pagina de aluno">MENTOR</button>
-            </a>
+        <div class = "boxes container">
+            <div class = "big box">
+                <h1> TUTOR</h1>
+                <p> Desenvolva as suas habilidades comunicativas  enquanto consolida seu conhecimento.
+Após o cumprimento de requisitos, você poderá solicitar seu certificado de tutor diretamente da plataforma.</p>
+                <a href="cadastro.html"> <button> entrar como tutor </button> </a>
+            </div>
+
+            <div class = "big box">
+                <h1> ESTUDANTE</h1>
+                <p> Aprenda e reforce seus estudos gratuitamente com a nossa plataforma e descubra novas formas de entender os conteúdos mais difíceis. 
+Opte por aulas tanto presenciais quanto online, com tutores completamente selecionados por você.</p>
+                <a href="cadastro.html"> <button> encontrar tutores </button> </a>
+            </div>
         </div>
+
+
     </div>
 {% endblock %}
 
