--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -1,7 +1,10 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<a href="../templates/home.html" class="volta">
 <h3> Voltar</h3>
+</a>
+
 <div class="perfil-container">
     <h3>gerenciador de perfil</h3>
   <div class="perfil-group">
