--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #edf2f4;
+  background-color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
   color: #000000;
   display: flex;
@@ -14,5 +14,13 @@ body {
 }
 
 header {
-    height: 150px;
+    background-color: #57cc99;
+  color: #ffffff;
+  height: 80px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 0 5%;
 }
