--- a/templates/desc_tutor.html
+++ b/templates/desc_tutor.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
+    <main>
         <h3>&larr; Voltar</h3>
         <div class="container-infogeraltutor">
             <div class="pilar_foto">
@@ -36,4 +37,5 @@
                 </div>
             </div>
         </div>
+    </main>
 {% endblock %}
