--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,3 +16,12 @@ body {
 header {
     height: 150px;
 }
+
+
+
+.container-infogeraltutor {
+  display: flex;
+  background-color: #f4f5f6;
+  border-radius: 25%;
+  box-shadow: 0px 4px 4px 0px;
+}
