--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,24 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div class = "container info">
-        <div class = "main text">
+    <div class = "container-info">
+        <div class = "main-text">
             <h1> De </h1>
             <h1> estudante </h1>
-            <h2> PARA ESTUDANTE</h2>
-            <div class = "mini desc">
+            <h2> <i> PARA ESTUDANTE </i> </h2>
+            <div class = "mini-desc">
                 <p> Um site pensado pra quem quer aprender sem custo e ensinar sem limites</p>
             </div>
         </div>
-        <div class = "boxes container">
-            <div class = "big box">
+        <div class = "boxes-container">
+            <div class = "big-box">
                 <h1> TUTOR</h1>
                 <p> Desenvolva as suas habilidades comunicativas  enquanto consolida seu conhecimento.
 Após o cumprimento de requisitos, você poderá solicitar seu certificado de tutor diretamente da plataforma.</p>
                 <a href="cadastro.html"> <button> entrar como tutor </button> </a>
             </div>
 
-            <div class = "big box">
+            <div class = "big-box">
                 <h1> ESTUDANTE</h1>
                 <p> Aprenda e reforce seus estudos gratuitamente com a nossa plataforma e descubra novas formas de entender os conteúdos mais difíceis. 
 Opte por aulas tanto presenciais quanto online, com tutores completamente selecionados por você.</p>
