--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,7 +40,7 @@ header {
 /* ------------perfil---------- */
 
 .perfil-container{
-    
+    background-color: #000000;
     border: 1px solid #8d99ae;
     border-radius: 12px;
     width: 80%;
