--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -8,22 +8,21 @@
         <form action="{{url_for('add_cadastro')}}" method="POST">
             <div class="cadastro-group">
                 <label for="nome">Nome</label>
-                <input type="text" id="cadastro-nome" placeholder="Coloque seu nome">
+                <input type="text" id="cadastro-nome" name="name" placeholder="Coloque seu nome">
 
             </div>
                 <div class="cadastro-group">
                 <label for="nome">email</label>
-                <input type="text" id="cadastro-email" placeholder="Coloque seu email">
+                <input type="email" id="cadastro-email" name="email" placeholder="Coloque seu email">
 
             </div>
                 <div class="cadastro-group">
                 <label for="nome">senha</label>
-                <input type="text" id="cadastro-senha" placeholder="Coloque sua senha">
+                <input type="password" id="cadastro-senha" name="password" placeholder="Coloque sua senha">
             </div>
             <button type="submit" class="submit-butoon">Entrar</button>
         </form>
         
     </div>
-    <button type="submit" class="submit-butoon">Add</button>
 </div>
 {% endblock %}
