--- a/templates/index.html
+++ b/templates/index.html
@@ -20,14 +20,14 @@
                 <h1> TUTOR</h1>
                 <p> Desenvolva as suas habilidades comunicativas  enquanto consolida seu conhecimento.
 Após o cumprimento de requisitos, você poderá solicitar seu certificado de tutor diretamente da plataforma.</p>
-                <a href="cadastro.html"> <button> entrar como tutor </button> </a>
+                <a href="{{ url_for('index') }}"> <button> entrar como tutor </button> </a>
             </div>
 
             <div class = "big-box">
                 <h1> ESTUDANTE</h1>
                 <p> Aprenda e reforce seus estudos gratuitamente com a nossa plataforma e descubra novas formas de entender os conteúdos mais difíceis. 
 Opte por aulas tanto presenciais quanto online, com tutores completamente selecionados por você.</p>
-                <a href="cadastro.html"> <button> encontrar tutores </button> </a>
+                <a href="{{ url_for('index') }}"> <button> encontrar tutores </button> </a>
             </div>
         </div>
 
