--- a/static/css/styleindex.css
+++ b/static/css/styleindex.css
@@ -17,30 +17,6 @@ header {
     height: 150px;
 }
 
-.container-info{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.main-text {
-    width: 40%;
-}
-
-.main-text h1{
-  font-size: 98;
-  font-family: Lato;
-}
-
-.main-text h2{
-  font-size: 39;
-  font-family: Lato;
-}
-
-.mini-desc{
-  display: flex;
-}
-
 /* Style do index.html */
 
 .container-info{
@@ -73,4 +49,29 @@ header {
     background-color: #C7F9CC;
     border-radius: 25%;
     text-align: center;
+}
+
+.big-box{
+    border-radius: 25%;
+    box-shadow: 0 4px 10px 0 #22577A;
+}
+
+.titulo{
+    background-color: #22577A;
+    border-radius: 25%;
+}
+
+.titulo h1{
+    font-size: 51;
+    font-family: Yeseva One;
+    text-align: center;
+}
+
+.big-box p{
+    font-size: 23;
+    text-align: center;
+}
+
+button{
+    border-radius: 50%;
 }
