--- a/templates/index.html
+++ b/templates/index.html
@@ -31,14 +31,18 @@
         </div>
         <div class = "boxes-container">
             <div class = "big-box">
-                <h1> TUTOR</h1>
+                <div class = "titulo">
+                    <h1> TUTOR</h1>
+                </div>
                 <p> Desenvolva as suas habilidades comunicativas  enquanto consolida seu conhecimento.
 Após o cumprimento de requisitos, você poderá solicitar seu certificado de tutor diretamente da plataforma.</p>
                 <a href="cadastro.html"> <button> entrar como tutor </button> </a>
             </div>
 
             <div class = "big-box">
-                <h1> ESTUDANTE</h1>
+                <div class = "titulo">
+                    <h1> ESTUDANTE</h1>
+                </div>
                 <p> Aprenda e reforce seus estudos gratuitamente com a nossa plataforma e descubra novas formas de entender os conteúdos mais difíceis. 
 Opte por aulas tanto presenciais quanto online, com tutores completamente selecionados por você.</p>
                 <a href="cadastro.html"> <button> encontrar tutores </button> </a>
