--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -12,12 +12,12 @@
 
             </div>
                 <div class="cadastro-group">
-                <label for="nome">email</label>
+                <label for="nome">Email</label>
                 <input type="email" id="cadastro-email" name="email" placeholder="Coloque seu email">
 
             </div>
                 <div class="cadastro-group">
-                <label for="nome">senha</label>
+                <label for="nome">Senha</label>
                 <input type="password" id="cadastro-senha" name="password" placeholder="Coloque sua senha">
             </div>
             <button type="submit" class="submit-butoon">Entrar</button>
