--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -8,7 +8,7 @@
         <form action="{{url_for('add_cadastro')}}" method="POST">
             <div class="cadastro-group">
                 <label for="nome">Nome</label>
-                <input type="text" id="cadastro-nome" name="name" placeholder="Coloque seu nome">
+                <input type="text" id="cadastro-nome" name="name" placeholder="Nome">
 
             </div>
                 <div class="cadastro-group">
