--- a/templates/desc_tutor.html
+++ b/templates/desc_tutor.html
@@ -5,7 +5,7 @@
         <h3>&larr; Voltar</h3>
         <div class="container-infogeraltutor">
             <div class="pilar_foto">
-                <img href="../static/assets/images/" alt="foto do tutor">
+                <img src="https://placehold.co/200x300" alt="foto do tutor">
                 <ul>
                     <li>MATÉRIAS QUE ENSINA</li>
                     <li>MATÉRIAS QUE ENSINA</li>
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="link_de_contatos">
-                    <p> <a href="pag_calendário"></a> ou <a href="mailto/tutor@gmail.com"> </p>
+                    <p> <a href="pag_calendário">Acesse o calendário do tutor</a> ou <a href="mailto/tutor@gmail.com">entre em contato</a> </p>
                 </div>
             </div>
         </div>
