--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <p> Desenvolva as suas habilidades comunicativas  enquanto consolida seu conhecimento.
 Após o cumprimento de requisitos, você poderá solicitar seu certificado de tutor diretamente da plataforma.</p>
-                <a href="{{ url_for('index') }}"> <button> entrar como tutor </button> </a>
+                <a href="{{ url_for('add_cadastro') }}"> <button> entrar como tutor </button> </a>
             </div>
 
             <div class = "big-box">
@@ -40,7 +40,7 @@ Após o cumprimento de requisitos, você poderá solicitar seu certificado de tu
                 </div>
                 <p> Aprenda e reforce seus estudos gratuitamente com a nossa plataforma e descubra novas formas de entender os conteúdos mais difíceis. 
 Opte por aulas tanto presenciais quanto online, com tutores completamente selecionados por você.</p>
-                <a href="{{ url_for('index') }}"> <button> encontrar tutores </button> </a>
+                <a href="{{ url_for('show_tutores') }}"> <button> encontrar tutores </button> </a>
             </div>
         </div>
     </div>
