--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -3,8 +3,10 @@
 {% block content %}
 
 <div class="cadastro-container">
-    <h2>Cadastro</h2>
-    <div class="cadrasto-form">
+    <div>
+        <h2>Cadastro</h2>
+    </div>
+    <div class="cadastro-form">
         <form action="{{url_for('add_cadastro')}}" method="POST">
             <div class="cadastro-group">
                 <label for="nome">Nome</label>
