--- a/static/css/styletutors.css
+++ b/static/css/styletutors.css
@@ -1,5 +1,7 @@
 .container-tutores{
-    padding: auto;
+    padding: 26px 20px;
+    max-width: 1020px;
+    margin: 0 auto;
 
 }
 .info-tutor {
@@ -8,5 +10,10 @@
     border-radius: 12px;
     width: 200px;
     text-align: center;
-    box-shadow: 0px 4px 3px 0px #00000040;
+    box-shadow: 0px 4px 3px 0px #d9d9d9;
+
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 40px;
+    column-gap: 60px;
 }
