capitalize labels for consistency in perfilcerto.html

--- a/templates/perfilcerto.html
+++ b/templates/perfilcerto.html
@@ -14,7 +14,7 @@
  
   <div class="resto-perf">
     <div class="perfil-group">
-      <label for="nome">nome</label>
+      <label for="nome">Nome</label>
       <input type="text" id="nome-perfil"  class="imput-perf">
     </div>
     <div class="perfil-group">
@@ -32,7 +32,7 @@
     </div>
     <h3> Contato</h3>
     <div class="perfil-group">
-      <label for="nome">telefone</label>
+      <label for="nome">Telefone</label>
       <input type="text" id="tel-perfil" class="imput-perf">
     </div>
     <div class="perfil-group">
