--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+
 body {
   background-color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
@@ -14,16 +15,43 @@ body {
 }
 
 header {
-    background-color: #57cc99;
+    background-color: #C7F9CC;
   color: #ffffff;
   height: 80px;
 
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  padding: 0 5%;
+width: 100%;
+  padding: 0 15px;
+  font-size: 73px;
+  text-decoration: none;
+  
 }
+
+a{ 
+  text-decoration: none;
+color: rgb(255, 255, 255);
+font-size: 20px;
+
+}
+.a-in{
+  background-color: #003e64;
+  border-radius: 15px;
+  padding: 5px;
+  
+}
+.a-in-div{
+  border-radius: 15px;
+  padding: 5px;
+  margin-bottom: 30px;
+}
+span{
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #003e64;
+   font-weight:100;
+   font-style:normal;
+  }
 
 
 
@@ -48,3 +76,115 @@ header {
     box-sizing: 0px 4px 3px 0px #00000040;
 }
 
+.big-box h1 { 
+  color: rgb(255, 255, 255);
+  background-color: #003e64;
+  width: min-content;
+  padding: 12px 15px;
+  border-radius: 15px;
+  font-family: 'LatoRegular';
+   font-weight: bold;
+   font-style: normal;
+}
+
+.h1-De{
+color: #003e64;
+font-size: 100px;
+font-weight:800;
+width: 100%;
+line-height: 90px;
+
+}
+.h1-Pe{
+color: #38a3a5;
+font-size: 70px;
+font-weight: bold;
+font-family: 'LatoRegular';
+   font-weight: bold;
+   font-style: normal;
+   width: 100%;
+   margin-top: 20px;
+}
+
+.main-text{
+  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 40%;
+
+}
+.mini-desc {
+  color: #003e64;
+  font-size: 40px;
+   font-weight: bold;
+  background-color: #c7f9cc;
+  width: 550px;
+  border-radius: 25px;
+  padding: 10px;
+  margin-top: 30px;
+  
+}
+
+.container-info{
+  display: flex;
+  margin: 40px;
+}
+.big-box p{
+  align-items: center;
+  color: #000000;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 80px;
+  margin-bottom: 80px;
+  width: 90%;
+}
+.big-box{
+  background-color: #ffffff;
+  border-radius: 25px;
+  box-shadow: -32px 15px 0px 15px rgba(0,62,100,1);
+-webkit-box-shadow: -32px 15px 0px 15px rgba(0,62,100,1);
+-moz-box-shadow: -32px 15px 0px 15px rgba(0,62,100,1);
+
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.bt{
+  background-color: #003e64;
+  color: #ffffff;
+  padding: 5px;
+  border-radius: 25px;
+  font-size: 20px;
+  margin-bottom: 40px;
+   border: none;
+}
+
+.be{
+  background-color: #003e64;
+  color: #ffffff;
+  padding: 5px;
+  border-radius: 25px;
+  font-size: 20px;
+  margin-bottom: 40px;
+   border: none;
+}
+
+.boxes-container {
+  margin: 20px;
+  align-items: center;
+  width: 300px;
+   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  border: #003e64;
+  
+margin-left: 100px;
+margin-right: 100px;
+}
+
+h1{
+  margin-top: 40px;
+}
