--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,32 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<<<<<<< HEAD
-    <div class="introdução">
-        <h3> nessa pagina voce podera selecioar conteudos em que possuei duvidas para pooder ter apoio de outros estudandoptes ou até mesmo proficionais com doutorado na area.</h3>
-    </div> 
-    <div class="escolha">
-        
-=======
-    <div class = "container info">
-        <div class = "main text">
-            <h1> De </h1>
-            <h1> estudante </h1>
-            <h2> PARA ESTUDANTE</h2>
-            <div class = "mini desc">
-                <p> Um site pensado pra quem quer aprender sem custo e ensinar sem limites</p>
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/lato" type="text/css"/>
+    <div class = "container-info">
+        <div class = "main-text">
+            <h1 class="h1-De">De <br> Estudante</h1>
+            <h1 class="h1-Pe">PARA ESTUDANTE</h1>
+            <div class = "mini-desc">
+                <p>Um site pensado pra quem quer aprender sem custo e ensinar sem limites.</p>
             </div>
         </div>
-        <div class = "boxes container">
-            <div class = "big box">
-                <h1> TUTOR</h1>
+        <div class = "boxes-container">
+            <div class = "big-box">
+                <h1>TUTOR</h1>
                 <p> Desenvolva as suas habilidades comunicativas  enquanto consolida seu conhecimento.
 Após o cumprimento de requisitos, você poderá solicitar seu certificado de tutor diretamente da plataforma.</p>
-                <a href="cadastro.html"> <button> entrar como tutor </button> </a>
+                <a href="cadastro.html"> <button class="bt"> Entrar como tutor </button> </a>
             </div>
-
-            <div class = "big box">
-                <h1> ESTUDANTE</h1>
+</div> <div class = "boxes-container">
+            <div class = "big-box">
+                <h1>ESTUDANTE</h1>
                 <p> Aprenda e reforce seus estudos gratuitamente com a nossa plataforma e descubra novas formas de entender os conteúdos mais difíceis. 
 Opte por aulas tanto presenciais quanto online, com tutores completamente selecionados por você.</p>
-                <a href="cadastro.html"> <button> encontrar tutores </button> </a>
+                <a href="cadastro.html"> <button class="be"> Encontrar tutores </button> </a>
             </div>
         </div>
 
 
->>>>>>> 110adea164035c3c9b3a1beb543d76af42ff0c92
     </div>
 {% endblock %}
 
