--- a/templates/perfilcerto.html
+++ b/templates/perfilcerto.html
@@ -2,7 +2,10 @@
 
 {% block content %}
 
-<h3> Voltar</h3>
+<a href="{{ url_for('index') }}" alt="Voltar" class="link-pa"  >
+<h1>&larrb; Voltar</h1>
+</a>
+
 
 <div class="perfil-container">
   <h3 class="titulo">gerenciador de perfil</h3>
