--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,3 +157,122 @@ background-color: #072e02;
     height: 200px;
     text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.imput-cadastro{
+  width: 80%;
+  border:none;
+  margin-left: 10px;
+  background-color: #38A3A5;
+}
+.imput-cadastro:focus{
+  outline: none;
+}
+.cadastro-group{
+  width: 100%;
+  background-color: #38A3A5;
+  border:2px solid #38A3A5 ;
+ display:flex;
+ border-radius: 20px;
+  margin-bottom: 10px;
+  padding: 2px 10px;
+  color: white;
+
+  height: 40px;
+}
+
+.submit-buton{
+  padding: 10px 40px;
+  font-size: 20px;
+  border-color: #22577A;
+  border-radius: 30px;
+  margin-top: 30px;
+  background-color: #22577A;
+  color: white;
+
+}
