--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -10,19 +10,19 @@
         <form action="{{url_for('add_cadastro')}}" method="POST">
             <div class="cadastro-group">
                 <label for="nome">Nome</label>
-                <input type="text" id="cadastro-nome" name="name" placeholder="Nome">
+                <input type="text" id="cadastro-nome" name="name" class="imput-cadastro">
 
             </div>
-                <div class="cadastro-group">
+            <div class="cadastro-group">
                 <label for="nome">Email</label>
-                <input type="email" id="cadastro-email" name="email" placeholder="Coloque seu email">
+                <input type="email" id="cadastro-email" name="email" class="imput-cadastro">
 
             </div>
-                <div class="cadastro-group">
+            <div class="cadastro-group">
                 <label for="nome">Senha</label>
-                <input type="password" id="cadastro-senha" name="password" placeholder="Coloque sua senha">
+                <input type="password" id="cadastro-senha" name="password" class="imput-cadastro">
             </div>
-            <button type="submit" class="submit-butoon">Entrar</button>
+            <button type="submit" class="submit-buton">Entrar</button>
         </form>
         
     </div>
