--- a/static/css/styletutors.css
+++ b/static/css/styletutors.css
@@ -1,3 +1,4 @@
+/* Style do tutors.html */
 .container-tutores{
     padding: 26px 20px;
     max-width: 1020px;
@@ -31,3 +32,4 @@
 .info-tutor p{
     font-size: 19;
 }
+/* Fim do style do tutors.html */
