--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,7 +15,10 @@ body {
 }
 
 header {
-    height: 150px;
+display: flex;
+width: 100%;
+justify-content: space-between;
+align-items: center;
 
     background-color: #C7F9CC;
   color: #ffffff;
@@ -57,7 +60,12 @@ font-size: 20px;
 .a-in-div{
   border-radius: 15px;
   padding: 5px;
-  margin-bottom: 30px;
+  justify-content:right;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  width: 10%;
 }
 span{
   -webkit-text-stroke-width: 2px;
