--- a/templates/tutores.html
+++ b/templates/tutores.html
@@ -1,4 +1,6 @@
+{% extends "layout.html" %}
 
+{% block content %}
     <h2>Conheça nossos tutores</h2>
     <main>
         <div class="container-tutores">
@@ -52,3 +54,5 @@
             </div>
         </div>
     </main>
+
+    {% endblock %}
