--- a/templates/index.html
+++ b/templates/index.html
@@ -15,14 +15,14 @@
                 <h1>TUTOR</h1>
                 <p> Desenvolva as suas habilidades comunicativas  enquanto consolida seu conhecimento.
 Após o cumprimento de requisitos, você poderá solicitar seu certificado de tutor diretamente da plataforma.</p>
-                <a href="cadastro.html"> <button class="bt"> Entrar como tutor </button> </a>
+                <a href="{{ url_for('add_cadastro') }}"> <button class="bt"> Entrar como tutor </button> </a>
             </div>
 </div> <div class = "boxes-container">
             <div class = "big-box">
                 <h1>ESTUDANTE</h1>
                 <p> Aprenda e reforce seus estudos gratuitamente com a nossa plataforma e descubra novas formas de entender os conteúdos mais difíceis. 
 Opte por aulas tanto presenciais quanto online, com tutores completamente selecionados por você.</p>
-                <a href="cadastro.html"> <button class="be"> Encontrar tutores </button> </a>
+                <a href="{{ url_for('show_tutores') }}"> <button class="be"> Encontrar tutores </button> </a>
             </div>
         </div>
 
@@ -31,3 +31,4 @@ Opte por aulas tanto presenciais quanto online, com tutores completamente seleci
 </body>
 </html>
 
+{% endblock %}
