--- a/static/css/style.css
+++ b/static/css/style.css
@@ -408,21 +408,29 @@ h1{
     flex-direction: row;
     row-gap: 40px;
     column-gap: 60px;
+    flex-wrap: wrap;
 
 }
 .info-tutor {
     background-color: #f4f5f6;
     border: 1px solid #8d99ae;
-    border-radius: 12px;
+    border-radius: 20px;
     width: 200px;
+    height: 350px;
     text-align: center;
     box-shadow: 0px 4px 3px 0px #d9d9d9;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .info-tutor img {
     height: 251px;
     width: 259px;
-    border-radius: 16px;
+     border-radius: 20px;
+    
 }
 
 .info-tutor h3{
@@ -432,4 +440,7 @@ h1{
 .info-tutor p{
     font-size: 19;
 }
+
+
+
 /* Fim do style do tutors.html */
