--- a/templates/tutores.html
+++ b/templates/tutores.html
@@ -4,54 +4,51 @@
     <h2>Conheça nossos tutores</h2>
     <main>
         <div class="container-tutores">
+          
             <div class="info-tutor">
-                <img href="..." alt="foto do tutor">
+                 <img src="https://placehold.co/200x300" alt="foto do tutor">
                 <h3>Nome</h3>
                 <p> Matéria que ensina </p>
                 <p>Cidade, - sigla</p>
             </div>
-            <div class="info-tutor">
-                <img href="..." alt="foto do tutor">
+             <div class="info-tutor">
+                 <img src="https://placehold.co/200x300" alt="foto do tutor">
                 <h3>Nome</h3>
                 <p> Matéria que ensina </p>
                 <p>Cidade, - sigla</p>
             </div>
-            <div class="info-tutor">
-                <img href="..." alt="foto do tutor">
+             <div class="info-tutor">
+                 <img src="https://placehold.co/200x300" alt="foto do tutor">
                 <h3>Nome</h3>
                 <p> Matéria que ensina </p>
                 <p>Cidade, - sigla</p>
             </div>
-            <div class="info-tutor">
-                <img href="..." alt="foto do tutor">
+             <div class="info-tutor">
+                <img src="https://placehold.co/200x300" alt="foto do tutor">
                 <h3>Nome</h3>
                 <p> Matéria que ensina </p>
                 <p>Cidade, - sigla</p>
             </div>
-            <div class="info-tutor">
-                <img href="..." alt="foto do tutor">
+              <div class="info-tutor">
+                 <img src="https://placehold.co/200x300" alt="foto do tutor">
                 <h3>Nome</h3>
                 <p> Matéria que ensina </p>
                 <p>Cidade, - sigla</p>
             </div>
-            <div class="info-tutor">
-                <img href="..." alt="foto do tutor">
+              <div class="info-tutor">
+                 <img src="https://placehold.co/200x300" alt="foto do tutor">
                 <h3>Nome</h3>
                 <p> Matéria que ensina </p>
                 <p>Cidade, - sigla</p>
             </div>
-            <div class="info-tutor">
-                <img href="..." alt="foto do tutor">
+            <a href="{{ url_for('desc_tutor') }}" alt="Voltar" class="link-pa" ></a>
+              <div class="info-tutor">
+                 <img src="https://placehold.co/200x300" alt="foto do tutor">
                 <h3>Nome</h3>
                 <p> Matéria que ensina </p>
                 <p>Cidade, - sigla</p>
             </div>
-            <div class="info-tutor">
-                <img href="..." alt="foto do tutor">
-                <h3>Nome</h3>
-                <p> Matéria que ensina </p>
-                <p>Cidade, - sigla</p>
-            </div>
+            </a>
         </div>
     </main>
 
