ajust in style-sheet page

--- a/templates/perfilcerto.html
+++ b/templates/perfilcerto.html
@@ -8,7 +8,7 @@
 
 
 <div class="perfil-container">
-  <h3 class="titulo">gerenciador de perfil</h3>
+  <h3 class="titulo">Gerenciador de perfil</h3>
   
     <div class="perfil-foto-group">
       <label for="foto-url"></label>
@@ -21,25 +21,25 @@
       <input type="text" id="nome-perfil"  class="imput-perf">
     </div>
     <div class="perfil-group">
-      <label for="nome">Instituição</label>
+      <label for="nome">Instituição </label>
       <input type="text" id="inst-perfil"  class="imput-perf">
     </div>
     <div class="perfil-group">
-      <label for="nome">Cidade</label>
+      <label for="nome">Cidade </label>
       <input type="text" id="cidade-perfil"  class="imput-perf">
     </div>
 
     <div class="perfil-group">
-      <label for="nome">Seu Material</label>
+      <label for="nome">Matérias que ensina </label>
       <input type="text" id="mat-perfil"  class="imput-perf">
     </div>
     <h3> Contato</h3>
     <div class="perfil-group">
-      <label for="nome">Telefone</label>
+      <label for="nome">Telefone </label>
       <input type="text" id="tel-perfil" class="imput-perf">
     </div>
     <div class="perfil-group">
-      <label for="nome">Email</label>
+      <label for="nome">Email </label>
       <input type="text" id="emaiç-perfil" class="imput-perf">
     </div>
   </div>
