--- a/static/css/styleshet-perfil.css
+++ b/static/css/styleshet-perfil.css
@@ -3,10 +3,13 @@
     border: 1px solid #8d99ae;
     border-radius: 12px;
     width: 80%;
+    height: auto;
     text-align: center;
     box-sizing: 0px 4px 3px 0px #00000040;
 }
 
 .boxes-container {
-  width: 60%;
+  max-width: 1020px;
+  padding: 26px 20px;
+  margin: 0 auto;
 }
