--- a/templates/tutores.html
+++ b/templates/tutores.html
@@ -41,7 +41,7 @@
                 <p> Matéria que ensina </p>
                 <p>Cidade, - sigla</p>
             </div>
-            <a href="{{ url_for('desc_tutor') }}" alt="Voltar" class="link-pa" ></a>
+            <a href="{{ url_for('show_info_tutor') }}" alt="Voltar" class="link-pa" ></a>
               <div class="info-tutor">
                  <img src="https://placehold.co/200x300" alt="foto do tutor">
                 <h3>Nome</h3>
