--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,8 +15,10 @@
       <img src="{{url_for('static', filename='assets/images/Logo.png')}}" alt="Tuts Logo Icon" height="50">
     </div>
     <div class="a-in-div">
+      {% if logado==0%}
       <a class="a-in" href="{{url_for('show_cadastro')}}">sing in</a>
       <a class="a-in" href="{{url_for('show_login')}}">log in</a>
+      {% endif %}
     </div>
 
   </a>
