--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
 
 
 body {
-  background-color: #edf2f4;
+  background-color: #ffffff;
   font-family: bree serif;
   color: #000000;
   display: flex;
