--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,6 +18,12 @@
       {% if logado==0%}
       <a class="a-in" href="{{url_for('show_cadastro')}}">sing in</a>
       <a class="a-in" href="{{url_for('show_login')}}">log in</a>
+      {% else %}
+         <a href="{{url_for('certo')}}">
+        <img  src="{{url_for('static', filename='assets/images/perfil_logado.png')}}" alt="Tuts Logo Icon" height="40">
+        </a>
+        </div>
+
       {% endif %}
     </div>
 
