--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,8 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&display=swap');
+
 * {
+   font-family: "Cabin", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -354,10 +358,11 @@ h1{
 }
 
 /* Style do desc-tutor.html */
-.container-infogeraltutor{
+  .container-infogeraltutor{
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  margin: 20px;
   background-color: #f4f5f6;
   border-radius: 8px;
   box-shadow: 0px 4px 4px 0px;
@@ -366,7 +371,8 @@ h1{
 .pilar_foto {
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 50px;
+  padding: 50px;
 }
 
 .pilar_foto img {
@@ -376,13 +382,34 @@ h1{
 .pilar_foto li {
     font-weight: 700;
     font-size: 19px;
+    padding-left: 50px;
 }
 
 .pilar_informações {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin-top: 40px;
     gap: 2px;
+}
+
+.descrition_text {
+  margin-top: 120px;
+  min-height: 300px;
+}
+.link_de_contatos{
+  margin-top: 50px; 
+}
+
+.link_de_contatos a{
+  color: #1c9698;
+  text-decoration: underline;
+}
+
+.bot-voltar {
+  padding-left: 20px;
+  padding-top: 20px;
+  font-size: 35px;
 }
 
 .pilar_informações h2{
